[UTF-8][Japanese]

*Ver3.30 : 2019/xx/xx

-[https://adiary.org/v3man/reStructuredText/:reStructuredText]に対応しました。
-index.htmlをレスポンシブ対応にしました。
-静的HTML出力の設定を変更しました。
-【さつき記法】
--リストやタイトル記法で文字の手前スペースを除去するようにしました。
--relやtargetやdataなどの設定を止めました。
--日時付き見出し記法（*t*記法）を削除しました。((この処理のためにだけに、入力テキストを前処理していました。))
--見出し記法をトップレベル以外では使用できなくしました。
--実装を色々と見直しました。
-記事編集画面
--同時編集ロック機能をリファクタリングしました。
--記法ヘルパーのコードを刷新しました。((いくつかあったバグも直っていると思います))
--編集中の記事タイトルをタイトルに表示するようにしました。
-スマホ表示時のボタンヘルプを無効にしました。
-非公開記事数をカウントしておくよう変更しました。
-jQuery UIの ui-tabs, accordion の使用をやめました。((大して重要ではない割に、CSSの記述を複雑にしていたので除去しました。))
-【Plubin/AMP】大きい画像がはみ出さないように layout="intrinsic" を追加しました。
-【Fix】PostgreSQL/MySQL運用時、外部画像取り込みが動作しない。
-【Fix】画像取り込み時のエラーメッセージがちゃんと表示されない。
-【Fix】システムチェック画面でCryptXの確認が正しくなかった。
-【Fix】index.html内のscriptが動いてなかった。
-【Fix】js や css の強制再読込に失敗する。（[https://github.com/nabe-abk/adiary/issues/6:Thanks to 1484]))
-【Fix】スイッチ表示時のタグ一覧等や「すべてのコメントを読む」のリンクをクリックしても反応がない。
-【Fix/httpd】PATH_INFOに全角文字などを指定できない。((コンテンツkeyに全角文字等を指定すると、記事が開けなくなる。))
-【Fix/記法】QRコード記法が正しく動作しない。（Thanks to jimba）
-【Fix/記法】画像サムネイルでリンク記法のサイズを変更。https対応。
-【Fix/印刷テーマ】_sagiri でフロートオブジェクトがはみ出す。
-【Security/DoS】第3者レンタル時、目次記法を使い、見出しに「{<toc></toc>}」と書くことで無限ループさせることができる。
-他

*Ver3.24 : 2019/05/31

-RSSからのリンクhash（#rss-tm）を除去する際、リロードしないようにしました。
-[https://bookmark.hatenastaff.com/entry/2019/05/28/141208:はてなブックマークの常時SSL化]に伴い、はてなブックマークへのリンクを https に変更。
-RFC7231に準拠し、リダイレクトを相対パスで出力するよう変更。
-アルバムにアップロード時の拡張子制約を緩和し、半角英数以外を含むものを許可しました。（[https://adiary.adiary.jp/0409#c1:Thanks to harata]）
-【conf】{<$v.album_allow_ver_ext>}の設定を削除
-【アルバム】ファイル名に使えない文字の制限を緩和しました。
-【Fix】トップページの2ページ目で「前のページ」のリンクが正しくない。（[https://adiary.adiary.jp/0409#com:Thanks to sabazo]）
-【Fix】mixiの画像サーバ等、一部のサイトにSSL接続できない。((Net::SSLeayモジュールで、[w:Server_Name_Indication:SNI]が有効になっていないため。))
-【Fix】body が 0byte の結果を応答するとき、「Content-Length: 0」を送れていなかった。
-【Fix/httpd】mime.types をロードする際、コメントも処理していた。
-【Fix/httpd】"file?query" 形式のとき、ファイルをロードできない。
-【Fix/httpd】拡張子判定時、大文字小文字を区別してしまう。
-【Fix/アルバム】ゴミ箱関連のファイル名の挙動がおかしい。