@@ -234,8 +234,16 @@
 # 検索時のスペース類文字の変更（正規表現）
 <$v.words_separator = '\s　'>
 
-# 静的HTMLエクスポートの設定
-<$v.static_output_dir = 'static/'>
+#----------------------------------------------------------
+# ■特殊エクスポート機能
+#----------------------------------------------------------
+# ※この機能は第3者に開放するとセキュリティホールになる危険性があります。
+#
+# 静的HTMLエクスポートの許可（全ユーザー）
+#<$v.static_export  = true>
+
+# Sphinx連携機能など特殊export機能の許可（管理者のみ）
+#<$v.special_export = true>
 
 ################################################################################
 # ■画像アルバムの設定
